--- a/03_Day_Booleans_operators_date/03_day_starter/index.html
+++ b/03_Day_Booleans_operators_date/03_day_starter/index.html
@@ -11,6 +11,7 @@
 
     <!-- import your scripts here -->
     <script src="./scripts/main.js"></script>
+    <script src="./scripts/level2.js"></script>
 
 </body>
 
