--- a/21_Day_DOM/21_day_starter/index2.html
+++ b/21_Day_DOM/21_day_starter/index2.html
@@ -7,7 +7,7 @@
 
 <body>
     <div class = "wrapper">
-        <p>
+        <p id = "Killua">
             Killua has spiky silver hair, very pale skin, and blue eyes.
             His eyes change shape depending on the mood that he's in, narrowing
             and sharpening when he goes into assassination mode. Killua is 
@@ -17,13 +17,13 @@
             In the Nippon Animation anime adaptation, Killua's eye color is changed to 
             green during the OVAs. He is also often seen holding a green skateboard (turned yellow in the 2011 series).
         </p>
-        <p>
+        <p id = "P2">
             This is another test paragraph
         </p>
-        <p>
+        <p id = "P3">
             Test paragraph 3
         </p>
-        <p>
+        <p id = "P4">
             Test paragraph 4
         </p>
         
